[gd_scene load_steps=2 format=3 uid="uid://3m0t3jpmdnmd"]

[ext_resource type="Script" uid="uid://dftry5n35s4du" path="res://script/biggie.gd" id="1_65kbn"]

[node name="CanvasLayer" type="CanvasLayer" node_paths=PackedStringArray("button1", "button2", "button3", "button4", "button5")]
script = ExtResource("1_65kbn")
button1 = NodePath("Button")
button2 = NodePath("PanelContainer2")
button3 = NodePath("PanelContainer")
button4 = NodePath("PanelContainer3")
button5 = NodePath("Button2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 0.515
anchor_bottom = 0.642
offset_left = 1.0
offset_top = 3.0
offset_right = -0.280029
offset_bottom = -0.0160217
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 1, 1)

[node name="Button" type="Button" parent="."]
offset_left = 37.0
offset_top = 20.0
offset_right = 167.0
offset_bottom = 82.0
text = "stop"

[node name="Button2" type="Button" parent="."]
offset_left = 79.0
offset_top = 162.0
offset_right = 186.0
offset_bottom = 193.0
text = "Hi im hidden
"

[node name="PanelContainer2" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(67, 0)
offset_left = 61.0
offset_top = 112.0
offset_right = 289.0
offset_bottom = 372.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="PanelContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer2"]
layout_mode = 2
text = "stop"

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 337.0
offset_top = 105.0
offset_right = 566.0
offset_bottom = 365.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer"]
layout_mode = 2
text = "go"

[node name="PanelContainer3" type="PanelContainer" parent="."]
offset_left = 644.0
offset_top = 105.0
offset_right = 873.0
offset_bottom = 365.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="PanelContainer3"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer3"]
layout_mode = 2
text = "go"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/Button" to="." method="_on_button_pressed_1"]
